<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:id="@+id/rootLayout" android:background="@drawable/rounded_background_white" android:padding="@dimen/default_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="4">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginEnd="@dimen/small_margin">
        <TextView android:textSize="@dimen/widgetValue" android:textStyle="bold" android:textColor="@color/grayDark" android:id="@+id/steps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        <TextView android:textSize="@dimen/widgetTitle" android:textColor="@color/grayDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/steps"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="@dimen/small_margin" android:layout_marginEnd="@dimen/small_margin">
        <TextView android:textSize="@dimen/widgetValue" android:textStyle="bold" android:textColor="@color/grayDark" android:id="@+id/km" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        <TextView android:textSize="@dimen/widgetTitle" android:textColor="@color/grayDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kmTitle"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="@dimen/small_margin">
        <TextView android:textSize="@dimen/widgetValue" android:textStyle="bold" android:textColor="@color/grayDark" android:id="@+id/min" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        <TextView android:textSize="@dimen/widgetTitle" android:textColor="@color/grayDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minTitle"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginStart="@dimen/small_margin">
        <TextView android:textSize="@dimen/widgetValue" android:textStyle="bold" android:textColor="@color/grayDark" android:id="@+id/calories" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"/>
        <TextView android:textSize="@dimen/widgetTitle" android:textColor="@color/grayDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calories"/>
    </LinearLayout>
</LinearLayout>
