<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="80dp"
    android:layout_height="70dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/tooltip_background"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/steps"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kmTitle"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/minTitle"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calories"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="?attr/customTextColor"
                android:textSize="@dimen/tiny_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
